[package]
name = "hcnet"
version = "0.1.0"
authors = [ "hpnlic <hpnlic@hotmail.com>" ]
edition = "2021"
description = "net for Rust"
repository = "https://github.com/hcengine/hcnet"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["hcnet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
log = "0.4.22"
algorithm = "0.1.12"

webparse = "0.3.0"

base64 = "0.22"
sha1 = "0.10.6"
rand = "0.8.5"

kcp = "0.5.3"
tokio_kcp = "0.9.8"

tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pemfile = "2.0.0"

chrono = "0.4.31"
env_logger = "0.11.5"

[dev-dependencies]
bpaf = "0.9.14"